fix: Correct mobile buttons covering edit-header

--- a/src/styles/EditList.scss
+++ b/src/styles/EditList.scss
@@ -51,8 +51,6 @@
 
 .container-edit__header {
   margin: 48px auto 0;
-  position: sticky;
-  top: 48px;
   background-color: white;
 
   h1 {
